<resources>
    <string name="app_name">信风</string>
    <string name="phone_is_null">请输入您的手机号</string>
    <string name="pwd_is_null">请输入您的密码</string>
    <string name="verification_code_is_null">请输入验证码</string>
    <string name="phone_is_error">请输入正确的手机号</string>
    <string name="try_again_later">请稍后再试</string>
    <string name="init_cream_hold">摄像头未初始化，请稍后</string>
    <string name="scan_sao">扫一扫</string>
    <string name="scan_fail">扫码失败</string>
    <string name="scan_success">扫描成功，即将打开该页面</string>
    <string name="no_net">网络连接错误，请检查...</string>
    <string name="stay_tuned">敬请期待</string>
    <string name="risk_test_title">信风1.0封测公告</string>
    <string name="risk_test">\n
      尊敬的用户：\n\t\t您好，上个版本中我们重点测试了服务器方面性能，并解决了多个隐藏问题，使得服务器的稳定性从各方面得到提升，非常感谢您的参与。
\n\t\t本次版本中，我们重构了客户端逻辑，使得运行更加流畅，解决了卡死、闪退等问题。本次针对客户端逻辑问题进行测试。
\n\t\t下个版本，我们将优化交互体验和调整部分界面，使得更人性化，更美观。
\n\t\t信风团队，感谢您的支持，与我们一起成长。</string>
    <string name="risk_test_organization">信风团队</string>
    <string name="risk_test_time">2019.05.16</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="share">转发</string>
    <string name="more">更多&#8230;</string>
    <string name="btn_sure">确定</string>
    <string name="btn_ok">好的</string>
    <string name="tv_sure">确定</string>
    <string name="tv_save">保存</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_no">不给</string>
    <string name="tv_cancel">取消</string>
    <string name="name">昵称</string>
    <string name="phone">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="dialog_btn_sure">确定</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_tv_update">发现新版本，是否下载并更新</string>
    <string name="dialog_modify_remark_name">修改备注</string>
    <string name="dialog_modify_group_name">修改群名</string>
    <string name="dialog_modify_group_card_name">修改群名片</string>
    <string name="dialog_response">回复</string>
    <string name="popwindow_sure">确定</string>
    <string name="popwindow_cancel">取消</string>
    <string name="popwindow_album">相册</string>
    <string name="popwindow_camera">相机</string>
    <string name="popwindow_choose_method">选择上传方式</string>
    <string name="popwindow_apply_for_camera">扫描二维码需要相机权限，应用将要申请使用相机权限</string>
    <string name="popwindow_go_for_open_camera">您已经禁止了相机权限,是否现在去开启</string>
    <string name="qrcode_not_in_this_app">非本应用二维码！</string>
    <string name="refused_and_exit">权限被拒绝,退出该页面</string>
    <string name="register_title">注册</string>
    <string name="register_country">国家/地区</string>
    <string name="register_phone">手机号</string>
    <string name="register_verification_code">验证码</string>
    <string name="register_set_pwd">设置密码</string>
    <string name="register_name">昵称</string>
    <string name="register_code_error">验证码错误</string>
    <string name="register_code_time_out">验证码已失效</string>
    <string name="register_pwd_set_error">密码至少要包括:\n字母、数字、标点符号\n的其中两项,长度为6–20位</string>
    <string name="register_succeed">注册成功</string>
    <string name="login_btn_login">登录</string>
    <string name="login_change_to_register">新用户注册</string>
    <string name="login_phone">手机号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login_pwd_login_title">密码登录</string>
    <string name="login_pwd">密码</string>
    <string name="login_change_to_msg_login">短信登录</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_pwd_error">密码错误</string>
    <string name="login_sms_login_title">短信登录</string>
    <string name="login_verification_code">验证码</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_code_error">短信验证码有误，请重新输入</string>
    <string name="login_code_time_out">验证码失效</string>
    <string name="login_change_to_pwd_login">密码登录</string>
    <string name="reset_pwd_title">重置密码</string>
    <string name="reset_pwd_verification_code">验证码</string>
    <string name="reset_pwd_get_code">获取验证码</string>
    <string name="reset_pwd_new_pwd">新密码</string>
    <string name="msg_fragment">消息</string>
    <string name="msg_del">删除</string>
    <string name="msg_to_up">置顶</string>
    <string name="msg_no_internet">网络不给力，请检查网络设置</string>
    <string name="msg_group_assistant">群助手</string>
    <string name="msg_group_notice">群通知</string>
    <string name="no_msg">暂无新消息</string>
    <string name="msg_pop_photo">照片</string>
    <string name="msg_pop_camera">相机</string>
    <string name="msg_pop_video">视频</string>
    <string name="msg_pop_voice">语音</string>
    <string name="msg_pop_transfer">转账</string>
    <string name="msg_pop_card">名片</string>
    <string name="group_assistant_title">群助手</string>
    <string name="group_assistant_pop_copy">复制</string>
    <string name="group_assistant_pop_forward">转发</string>
    <string name="group_assistant_sub_title">以下为收进群助手且不提醒的群消息</string>
    <string name="official_push_title">官方推送</string>
    <string name="msg_group_notice_title">群通知</string>
    <string name="add_group_application_title">加群申请</string>
    <string name="add_group_notice_title">加群通知</string>
    <string name="exit_group_notice_title">退群通知</string>
    <string name="refused_notice_title">拒绝通知</string>
    <string name="contacts_fragment">联系人</string>
    <string name="contacts_friend">好友</string>
    <string name="contacts_group">群组</string>
    <string name="contacts_request_notice">请求通知</string>
    <string name="non_friend_info_title">好友资料</string>
    <string name="non_friend_info_name">昵称</string>
    <string name="non_friend_info_account">帐号</string>
    <string name="non_friend_info_signature">个签</string>
    <string name="non_friend_info_discover">动态</string>
    <string name="non_friend_info_btn_add_fiend">添加好友</string>
    <string name="add_friend_write_info_title">添加好友</string>
    <string name="add_friend_write_info_send">发送</string>
    <string name="add_friend_write_info_msg">填写验证信息：</string>
    <string name="add_friend_write_info_msg_edit_hint">您好，我想加您为好友</string>
    <string name="add_friend_write_info_set_remark">设置备注</string>
    <string name="add_friend_write_info_set_remark_edit_hint">请输入您对该好友的备注</string>
    <string name="add_friend_write_info_remark">备注</string>
    <string name="simple_group_details_introduction">群介绍</string>
    <string name="simple_group_details_create_time">创建时间</string>
    <string name="simple_group_details_member_num">群成员</string>
    <string name="simple_group_details_location">群地点</string>
    <string name="simple_group_details_sort">群分类</string>
    <string name="simple_group_details_label">群标签</string>
    <string name="simple_group_details_unfilled">未填</string>
    <string name="simple_group_details_btn_add_group">申请加群</string>
    <string name="group_label_title">群标签</string>
    <string name="group_label_edit">编辑</string>
    <string name="group_label_add">添加</string>
    <string name="group_label_input_new_lable">输入新标签名称</string>
    <string name="search_title">搜索</string>
    <string name="search_none">抱歉未搜索到当前信息</string>
    <string name="discover_fragment">发现</string>
    <string name="discover_title">朋友圈</string>
    <string name="discover_discover">朋友圈</string>
    <string name="discover_pet_fuhua">宠物孵化基地</string>
    <string name="discover_pet_ai">AI宠物学舌</string>
    <string name="discover_pet_shop">宠物商城</string>
    <string name="discover_pet_life">宠物生涯</string>
    <string name="discover_predictor">我是预言家</string>
    <string name="discover_gaobai_wall">世界告白墙</string>
    <string name="discover_zhi_add_friend">吱一吱，加好友</string>
    <string name="discover_app_store">应用商城</string>
    <string name="discover_music">中国好音乐</string>
    <string name="discover_shiyong">周周试用免单</string>
    <string name="discover_jianding">防伪溯源鉴定</string>
    <string name="discover_ad_wall">广告墙</string>
    <string name="personal_fragment">个人中心</string>
    <string name="personal_share">分享</string>
    <string name="personal_setting">设置</string>
    <string name="personal_discover">动态</string>
    <string name="personal_btn_send_msg">发送消息</string>
    <string name="personal_no_set">暂未设置</string>
    <string name="personal_set_signature">快来设置您的个性签名吧</string>
    <string name="my_info_title">我的资料</string>
    <string name="my_info_nick_name">昵称：</string>
    <string name="my_info_modify_nick_name">修改昵称</string>
    <string name="my_info_account">账号：</string>
    <string name="my_info_modify_account">修改账号</string>
    <string name="my_info_signature">个签：</string>
    <string name="my_info_modify_signature">修改个性签名</string>
    <string name="my_info_no_set">暂未设置</string>
    <string name="qrcode_title_mine">我的二维码</string>
    <string name="qrcode_add_me">扫一扫二维码，加我为好友</string>
    <string name="qrcode_title_friend">好友二维码</string>
    <string name="qrcode_title_group">群聊二维码</string>
    <string name="qrcode_add_group">扫一扫二维码，加入群聊</string>
    <string name="qrcode_save">保存到手机</string>
    <string name="qrcode_share">分享二维码</string>
    <string name="setting_title">设置</string>
    <string name="setting_card_share">名片分享设置</string>
    <string name="setting_account_security">帐号与安全</string>
    <string name="setting_privacy">隐私设置</string>
    <string name="setting_msg_notifications">消息提醒</string>
    <string name="setting_block_list">屏蔽设置</string>
    <string name="setting_discover">朋友圈设置</string>
    <string name="setting_clear_cache">清理缓存</string>
    <string name="setting_check_version_update">检查更新</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_btn_log_out">退出登录</string>
    <string name="setting_version_update_tip">已经是最新版本</string>
    <string name="setting_version_btn_update">更新</string>
    <string name="setting_about_us_tip">这里是关于我们\n敬请期待</string>
    <string name="setting_no_cache">暂无缓存</string>
    <string name="setting_btn_just_log_out">仅退出帐号</string>
    <string name="setting_btn_log_out_and_delete">退出并删除帐号信息</string>
    <string name="card_sharing_title">名片分享</string>
    <string name="card_sharing_permit">允许分享</string>
    <string name="card_sharing_need_ask">需要验证</string>
    <string name="card_sharing_deny">禁止被分享</string>
    <string name="card_sharing_save_succeed">名片分享设置成功!</string>
    <string name="account_security_title">账号与安全</string>
    <string name="account_security_modify_pwd">修改密码</string>
    <string name="account_security_change_bind">更换绑定</string>
    <string name="privacy_title">隐私设置</string>
    <string name="privacy_show_account">帐号显示</string>
    <string name="privacy_show_qrcode">二维码显示</string>
    <string name="privacy_save_succeed">隐私设置保存成功！</string>
    <string name="msg_notification_title">消息提醒</string>
    <string name="msg_notification_accept_news">接收新消息提醒</string>
    <string name="msg_notification_accept_voice">接收语音邀请</string>
    <string name="msg_notification_accept_video">接收视频邀请</string>
    <string name="msg_notification_show_push_content">推送显示内容</string>
    <string name="msg_notification_save_succeed">消息提醒设置成功！</string>
    <string name="block_list_title">屏蔽名单</string>
    <string name="home_pop_create_new_group">创建群聊</string>
    <string name="home_pop_add_friend_or_group">添加好友/群</string>
    <string name="home_pop_scan">扫一扫</string>
    <string name="create_group_title">创建群聊</string>
    <string name="create_group_search_edit_hint">搜索好友/群</string>
    <string name="create_group_create">立即创建</string>
    <string name="create_group_search_friend_edit_hint">搜索好友</string>
    <string name="notice_title">通知</string>
    <string name="notice_btn_agree">同意</string>
    <string name="notice_delete">删除</string>
    <string name="notice_waiting">等待验证</string>
    <string name="notice_already_agree">已同意</string>
    <string name="notice_already_reject">已拒绝</string>
    <string name="notice_already_time_out">已过期</string>
    <string name="exit_group_disconnected">你将失去与他们的联系</string>
    <string name="exit_group_choose_transfer_or_dismiss">你是群主，请选择转让或解散群，建议转让</string>
    <string name="exit_group_transfer">转让</string>
    <string name="exit_group_dismiss">解散</string>
</resources>