<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/login_bac">
    <include
        layout="@layout/login_include_title_bar"
        />

    <!--<ScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:scrollbars="none">-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical" >-->
    <TextView
        android:id="@+id/pwd_tv_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:layout_gravity="center"
        android:paddingTop="@dimen/dp10"
        android:paddingBottom="@dimen/dp10"
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp20"
        android:text="短信验证码有误，请重新输入"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        android:visibility="invisible"
        android:background="@drawable/pwd_tv_notice_background"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/dp45"
        android:layout_marginLeft="@dimen/dp45"
        android:layout_marginTop="@dimen/dp15"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="国家/地区"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp30"
                    android:padding="@dimen/dp10"
                    android:text="中国（+86）"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp30"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/reg_ed_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/login_phone"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:minEms="11"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp1"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp30"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp5"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/pwd_ed_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/verification_code"
                        android:inputType="number"
                        android:maxLength="6"
                        android:minEms="6"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textCursorDrawable="@null" />

                    <TextView
                        android:id="@+id/pwd_tv_send_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/btn_shape_login_train"
                        android:padding="@dimen/dp8"
                        android:text="@string/login_get_code"
                        android:textColor="@color/white" />
                </LinearLayout>

                <View
                    style="@style/style_wei_line"
                    android:background="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/pwd_tv_code_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="@dimen/dp10"
                android:paddingRight="@dimen/dp5"
                android:paddingBottom="@dimen/dp10"
                android:text="@string/login_change_to_pwd_login"
                android:textColor="@color/white"
                android:textSize="@dimen/sp14" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp20"
            android:orientation="vertical">
            <Button
                android:id="@+id/pwd_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_login"
                android:layout_gravity="center"
                android:textSize="@dimen/sp16"
                android:textColor="@color/white"
                android:background="@drawable/login_btn_bac"/>

            <TextView
                android:id="@+id/pwd_tv_new_resgister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/dp5"
                android:layout_marginTop="@dimen/dp15"
                android:textColor="@color/app_theme"
                android:textSize="@dimen/sp15"
                android:text="@string/login_change_to_register"/>
        </LinearLayout>
    </RelativeLayout>
    <!--</LinearLayout>-->
    <!--</ScrollView>-->
</LinearLayout>
