<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/activity_include_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mine_bac"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/dp30"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@drawable/btn_ziliao_top"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/qrcode_iv_head"
                            android:layout_width="@dimen/dp80"
                            android:layout_height="@dimen/dp80"
                            app:srcCompat="@drawable/first_head_nor"
                            android:layout_margin="@dimen/dp10"
                            />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/qrcode_tv_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="@dimen/sp16"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"

                                android:text="android"/>
                            <TextView
                                android:id="@+id/qrcode_tv_sao"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="@dimen/sp14"
                                android:layout_marginTop="@dimen/dp10"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"
                                android:text="@string/qrcode_add_group"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@drawable/btn_ziliao_bottom"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/qrcode_iv_qrcode"
                        android:layout_width="@dimen/dp250"
                        android:layout_height="@dimen/dp250"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:layout_margin="@dimen/dp20"
                        />
                </LinearLayout>
                <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/dp10"-->
                <!--android:background="@color/app_theme"-->
                <!--/>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/quncode_tv_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qrcode_save"
                    android:paddingTop="@dimen/dp10"
                    android:paddingRight="@dimen/dp20"
                    android:paddingLeft="@dimen/dp20"
                    android:paddingBottom="@dimen/dp10"
                    android:layout_margin="@dimen/dp10"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/gray666"
                    android:textSize="@dimen/sp16"
                    android:background="@drawable/btn_solid_stroke_white"

                    />
                <TextView
                    android:id="@+id/quncode_tv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qrcode_share"
                    android:paddingTop="@dimen/dp10"
                    android:paddingRight="@dimen/dp20"
                    android:paddingLeft="@dimen/dp20"
                    android:paddingBottom="@dimen/dp10"
                    android:layout_margin="@dimen/dp10"
                    android:textSize="@dimen/sp16"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_stroke_sel"

                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

